--- a/src/site/markdown/download.md.vm
+++ b/src/site/markdown/download.md.vm
@@ -69,23 +69,23 @@ Log4j ${Log4jReleaseVersionJava6} was the last 2.x release to support Java 6. Th
 
 | Distribution                   | Mirrors                                    | Checksum                                          | Signature                                         |
 | ------------------------------ | ------------------------------------------ | ------------------------------------------------- | ------------------------------------------------- |
-| Apache Log4j 2 binary (tar.gz) | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz][bintar-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.md5][bintarmd5-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.asc][bintarasc-jdk6] |
-| Apache Log4j 2 binary (zip)    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip][binzip-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.md5][binzipmd5-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.asc][binzipasc-jdk6]    |
-| Apache Log4j 2 source (tar.gz) | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz][srctar-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.md5][srctarmd5-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.asc][srctarasc-jdk6] |
-| Apache Log4j 2 source (zip)    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip][srczip-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip.md5][srczipmd5-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip.asc][srczipasc-jdk6]    |
+| Apache Log4j 2 binary (tar.gz) | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz][bintar-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.sha512][bintarsha512-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.asc][bintarasc-jdk6] |
+| Apache Log4j 2 binary (zip)    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip][binzip-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.sha512][binzipsha512-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.asc][binzipasc-jdk6]    |
+| Apache Log4j 2 source (tar.gz) | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz][srctar-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.sha512][srctarsha512-jdk6] | [apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.asc][srctarasc-jdk6] |
+| Apache Log4j 2 source (zip)    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip][srczip-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip.sha512][srczipsha512-jdk6]    | [apache-log4j-${Log4jReleaseVersionJava6}-src.zip.asc][srczipasc-jdk6]    |
 
-[bintar-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz
-[bintarmd5-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.md5
-[bintarasc-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.asc
-[binzip-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip
-[binzipmd5-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.md5
-[binzipasc-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.asc
-[srctar-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz
-[srctarmd5-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.md5
-[srctarasc-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.asc
-[srczip-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip
-[srczipmd5-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip.md5
-[srczipasc-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip.asc
+[bintar-jdk6]:       https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz
+[bintarsha512-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.sha512
+[bintarasc-jdk6]:    https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.tar.gz.asc
+[binzip-jdk6]:       https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip
+[binzipsha512-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.sha512
+[binzipasc-jdk6]:    https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-bin.zip.asc
+[srctar-jdk6]:       https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz
+[srctarsha512-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.sha512
+[srctarasc-jdk6]:    https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.tar.gz.asc
+[srczip-jdk6]:       https://www.apache.org/dyn/closer.lua/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip
+[srczipsha512-jdk6]: https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip.sha512
+[srczipasc-jdk6]:    https://www.apache.org/dist/logging/log4j/${Log4jReleaseVersionJava6}/apache-log4j-${Log4jReleaseVersionJava6}-src.zip.asc
 
 All previous releases of Apache log4j can be found in the
 [archive repository](https://archive.apache.org/dist/logging/log4j/).
