Add docs for LOG4J2-3341
Signed-off-by: Matt Sicker <mattsicker@apache.org>

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -941,11 +941,51 @@ Configuration:
               wrapper element, as the TimeBasedTriggeringPolicy and SizeBasedTriggeringPolicy are defined below.
             </p>
             <p>
+              As of version 2.17.2,
+              appenders can use the wrapper element as the implicit name of the component.
+              If no name is specified, the grouping element is used as the name. For example, the following
+              two properties snippets are equivalent.
+            </p>
+            <pre class="prettyprint linenums">
+appender.STDOUT.type = Console
+            </pre>
+            <pre class="prettyprint linenums">
+appender.console.type = Console
+appender.console.name = STDOUT
+            </pre>
+            <p>
+              As of version 2.17.2,
+              <tt>rootLogger</tt> and <tt>logger.<var>key</var></tt> properties can be specified to set the
+              level and zero or more appender refs to create for that logger. The level and appender refs are
+              separated by comma <tt>,</tt> characters with optional whitespace surrounding the comma. The
+              following example demonstrates how the shorthand is expanded when reading properties configurations.
+            </p>
+            <pre class="prettyprint linenums">
+appender.stdout.type = Console
+# ... other appender properties
+appender.file.type = File
+# ... other appender properties
+logger.app = INFO, stdout, file
+logger.app.name = com.example.app
+
+# expanded to:
+appender.stdout.type = Console
+appender.stdout.name = stdout
+# ...
+appender.file.type = File
+appender.file.name = file
+# ...
+logger.app.name = com.example.app
+logger.app.level = INFO
+logger.app.appenderRef.$1.ref = stdout
+logger.app.appenderRef.$2.ref = file
+            </pre>
+            <p>
               Properties configuration files support the advertiser, monitorInterval, name, packages, shutdownHook,
               shutdownTimeout, status, verbose, and dest attributes. See <a href="#ConfigurationSyntax">Configuration Syntax</a>
               for the definitions of these attributes.
             </p>
-          <pre class="prettyprint linenums">
+            <pre class="prettyprint linenums">
 status = error
 dest = err
 name = PropertiesConfig
@@ -964,7 +1004,7 @@ appender.console.filter.threshold.level = error
 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
-appender.rolling.fileName = ${filename}
+appender.rolling.fileName = ${dollar}{filename}
 appender.rolling.filePattern = target/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
@@ -977,13 +1017,15 @@ appender.rolling.policies.size.size=100MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 5
 
+logger.rolling = debug, RollingFile
 logger.rolling.name = com.example.my.app
-logger.rolling.level = debug
 logger.rolling.additivity = false
-logger.rolling.appenderRef.rolling.ref = RollingFile
 
-rootLogger.level = info
-rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger = info, STDOUT
+
+# or using a grouping element:
+# rootLogger.level = info
+# rootLogger.appenderRef.stdout.ref = STDOUT
           </pre>
           <a name="Loggers"/>
           <h4>Configuring Loggers</h4>
